--- a/app/globals.css
+++ b/app/globals.css
@@ -30,6 +30,10 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   }
 }
 
+/* #carouselImage{
+  color: black !important;
+} */
+
 .animate-blink {
   animation: blink 1s infinite;
 }
