--- a/app/globals.css
+++ b/app/globals.css
@@ -76,6 +76,43 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   width: 100%;
 }
 
+.button2 {
+  display: inline-block;
+  padding: 0.75rem 1.25rem;
+  color: #161A30;
+  transition: all 0.3s;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
+.button2:after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #F0ECE5;
+  z-index: -2;
+}
+.button2:before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  background-color: #FFFFFF;
+  transition: all 0.3s;
+  z-index: -1;
+}
+.button2:hover {
+  color: #161A30;
+}
+.button2:hover:before {
+  width: 100%;
+}
+
 
 
 /* btn 2 */
